--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAP UI5 Walkthrough</title>
+	<meta charset="utf-8">
+	<title>Quickstart Tutorial</title>
+	<script id="sap-ui-bootstrap"
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+		data-sap-ui-libs="sap.m"
+		data-sap-ui-compat-version="edge"
+		data-sap-ui-async="true"
+		data-sap-ui-on-init="module:ui5/quickstart/index"
+		data-sap-ui-resource-roots='{
+			"ui5.quickstart": "./"
+		}'>
+	</script>
 </head>
-<body>
-    <h1>Hello World</h1>
+<body class="sapUiBody" id="content">
+    
 </body>
 </html>
