--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,13 +8,14 @@
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-compat-version="edge"
 		data-sap-ui-async="true"
-		data-sap-ui-on-init="module:ui5/quickstart/index"
+		data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
 		data-sap-ui-resource-roots='{
 			"ui5.quickstart": "./"
 		}'>
 	</script>
 </head>
 <body class="sapUiBody" id="content">
-    
+    <div data-sap-ui-component data-name="ui5.quickstart" data-id="container" data-settings='{"id" : "quickstart"}'></div>
+
 </body>
 </html>
